test/semantic_errors/redeclaration.lat
// Test: Variable redeclaration
// Expected error: Variable 'x' is already defined

munus main() {
    x: integer = 1
    x: integer = 2
}
